# WayHelm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  install.sh
.github/workflows/: release.yml
data/: io.github.wayhelm.Wayhelm.metainfo.xml  wayhelm.desktop
packaging/: .SRCINFO  .SRCINFO-git  PKGBUILD  PKGBUILD-git
src/: app.rs  autostart.rs  certs.rs  config.rs  connlog.rs  ctl.rs  diagnostics.rs  firewall.rs  main.rs  netinfo.rs  service.rs  settings.rs  tray.rs  util.rs
src/ui/: dashboard.rs  wizard.rs
