[package]
name = "wayhelm"
version = "0.1.0"
edition = "2021"
description = "Wayhelm — a GTK4/libadwaita GUI for configuring and managing the wayvnc Wayland VNC server"
license = "MIT"
authors = ["Ryan"]

[[bin]]
name = "wayhelm"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
libc = "0.2"
ksni = "0.2"
async-channel = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
